<resources>
    <string name="app_name">Ma réu</string>
    <string name="by_date">Par date</string>
    <string name="by_place">Par lieu</string>
    <string name="save_button">Enregistrer</string>
    <string name="date">Date :</string>
    <string name="begin_hour">Cliquer ici</string>
    <string name="finish_hour">Cliquer ici</string>
    <string name="meeting_date">Cliquer ici</string>
    <string name="meeting_name">Renseigner le nom de la réunion</string>
    <string name="meeting_room">Renseigner le nom de la réunion</string>
    <string name="participants">Renseigner les emails des participants</string>
    <string name="add_participant">Ajouter</string>
    <string name="begin_hour_2points">Heure de début :</string>
    <string name="finish_hour_2points">Heure de fin :</string>
    <string name="choose_meetingRoom">Veuillez choisir une salle</string>
    <string name="its_not_an_email_message">Veuillez entrer un e-mail valide</string>
    <string name="field_isEmpty">Veuillez renseigner tout les champs</string>

    <string name="room01">Peach</string>
    <string name="room02">Mario</string>
    <string name="room03">Luigi</string>
    <string name="room04">Toad</string>
    <string name="room05">Bowser</string>
    <string name="room06">Yoshi</string>
    <string name="room07">Wario</string>
    <string name="room08">Daisy</string>
    <string name="room09">Harmonie</string>
    <string name="room10">Pokey</string>
    <string name="item_text_reunion">Réunion 1</string>
    <string name="item_text_mail">Marty.McFly@gmail.com</string>
    <string name="item_text_room">Guzzler13</string>
    <string name="item_text_date">08h00</string>
    <string name="item_text_meeting">Réunion 1</string>
    <string name="trash">trash</string>
    <string name="nameRoom">Nom de la salle :</string>
    <string name="commaParticipants">, </string>

</resources>
